MESSAGE(STATUS "Adding unit-tests-vector")
add_executable(unit-tests-vector unit-tests-vector2.cpp unit-tests-vector3.cpp unit-tests-vector4.cpp)
set_target_properties(unit-tests-vector PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-vector PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-vector PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-matrix")
add_executable(unit-tests-matrix unit-tests-matrix2x2.cpp unit-tests-matrix3x3.cpp unit-tests-matrix4x4.cpp)
set_target_properties(unit-tests-matrix PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-matrix PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-matrix PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-trigonometry")
add_executable(unit-tests-trigonometry unit-tests-trigonometry.cpp)
set_target_properties(unit-tests-trigonometry PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-trigonometry PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-trigonometry PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-mathematics")
add_executable(unit-tests-mathematics unit-tests-mathematics.cpp)
set_target_properties(unit-tests-mathematics PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-mathematics PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-mathematics PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-data")
add_executable(unit-tests-data unit-tests-data.cpp)
set_target_properties(unit-tests-data PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-data PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-data PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-color")
add_executable(unit-tests-color unit-tests-color.cpp)
set_target_properties(unit-tests-color PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-color PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-color PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-conversions")
add_executable(unit-tests-conversions unit-tests-conversions.cpp)
set_target_properties(unit-tests-conversions PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-conversions PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-conversions PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-constants")
add_executable(unit-tests-constants unit-tests-constants.cpp)
set_target_properties(unit-tests-constants PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-constants PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-constants PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-random")
add_executable(unit-tests-random unit-tests-random.cpp)
set_target_properties(unit-tests-random PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-random PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-random PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-time_date")
add_executable(unit-tests-time_date unit-tests-time_date.cpp)
set_target_properties(unit-tests-time_date PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-time_date PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-time_date PRIVATE processing_engine)

MESSAGE(STATUS "Adding unit-tests-transform")
add_executable(unit-tests-transform unit-tests-transform.cpp)
set_target_properties(unit-tests-transform PROPERTIES FOLDER "test/unit")
target_link_libraries(unit-tests-transform PRIVATE Catch2::Catch2WithMain)
target_link_libraries(unit-tests-transform PRIVATE processing_engine)